# GeoResourceAgent

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: db.py  main.py  seed.py
backend/app/models/: conversation.py  message.py  user.py
backend/app/routers/: conversations.py  files.py  health.py  messages.py  running_tables.py  users.py  ws.py
backend/app/schemas/: conversations.py  messages.py  users.py
backend/app/utils/: auth.py  mockdata.py
backend/document/: docusaurus.config.js  package-lock.json  package.json
backend/document/docs/: intro.md
backend/document/docs/Agent/: _category_.json  agent_template.md
backend/document/docs/backend/: _category_.json  api.md  env.md  fastapi.md
backend/document/src/css/: custom.css
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: conversations.ts  users.ts
frontend/src/context/: CurrentConversationContext.tsx  UserContext.tsx
frontend/src/mocks/: handlers.ts
src/: app.py
src/agents/: accounting_agent.py  econ_agent.py  esg_agent.py  geo_agent.py  prod_agent.py
src/integrations/APIfunctions/: AutoregressiveAPI.py  CentralMontneyShale_predictor.py  (+8 more)
src/users/: db.py  users.py
src/utils/: ESG_agent.py  build_langgraph.py  build_langgraph_toolbox.py  build_langgraph_toolbox1218.py  chroma_utils.py  db_utils.py  econ_agent.py  geo_agent.py  logger_utils.py  memory_utils.py  multiTask_agent.py  prod_agent.py  simple_chatbot.py  toolbox_management.py
(+59 files in other folders)
